--- a/nft-minting-app-main/public/config/config.json
+++ b/nft-minting-app-main/public/config/config.json
@@ -1,6 +1,6 @@
 {
   "CONTRACT_ADDRESS": "0x691635443ed8db75bbc57930f4b25b728735882e",
-  "SCAN_LINK": "https://mumbai.polygonscan.com/address/0x691635443ed8db75bbc57930f4b25b728735882e",
+  "SCAN_LINK": "https://polygonscan.com/address/0x691635443ed8db75bbc57930f4b25b728735882e",
   "NETWORK": {
     "NAME": "Polygon",
     "SYMBOL": "Matic",
@@ -13,6 +13,6 @@
   "DISPLAY_COST": 4,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://testnets.opensea.io/collection/dripmonkeyz",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/dripmonkeyz",
   "SHOW_BACKGROUND": true
 }
