--- a/nft-minting-app-main/public/config/config.json
+++ b/nft-minting-app-main/public/config/config.json
@@ -12,7 +12,7 @@
   "WEI_COST": 4000000000000000000,
   "DISPLAY_COST": 4,
   "GAS_LIMIT": 285000,
-  "MARKETPLACE": "Opeansea",
+  "MARKETPLACE": "Opensea Collection",
   "MARKETPLACE_LINK": "https://opensea.io/collection/dripmonkeyz",
   "SHOW_BACKGROUND": true
 }
